fixed icon visibility in the form

--- a/scss/_welcome.scss
+++ b/scss/_welcome.scss
@@ -21,7 +21,7 @@
     padding: 15px;
 
     @include breakpoints-up(medium) {
-      width: 65%;
+      width: 500px;
       padding: 35px;
     }
   }
