--- a/scss/style.css
+++ b/scss/style.css
@@ -118,7 +118,7 @@ body {
     transform: rotate(5deg);
   }
   50% {
-    transform: rotate(0deg);
+    transform: rotate(0eg);
   }
   75% {
     transform: rotate(-5deg);
@@ -375,9 +375,7 @@ body {
 .transfer__percent {
   position: absolute;
   display: block;
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   white-space: nowrap;
   bottom: 8%;
@@ -719,9 +717,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 30px;
-  width: -moz-fit-content;
   width: fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   border: 4px solid #000000;
   box-shadow: 7px 6px black;
@@ -793,7 +789,7 @@ body {
 }
 @media (min-width: 820px) {
   .welcome__box {
-    width: 65%;
+    width: 500px;
     padding: 35px;
   }
 }
@@ -856,9 +852,6 @@ body {
   border: 2px solid #9747ff;
   outline: 2px solid #9747ff;
 }
-.welcome__input:focus::-moz-placeholder {
-  opacity: 0;
-}
 .welcome__input:focus::placeholder {
   opacity: 0;
 }
@@ -896,7 +889,6 @@ body {
 }
 .welcome__link {
   line-height: 0;
-  height: -moz-fit-content;
   height: fit-content;
 }
 .welcome__link svg rect:hover {
@@ -909,4 +901,6 @@ body {
 
 .material-symbols-outlined {
   font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
-}/*# sourceMappingURL=style.css.map */
+}
+
+/*# sourceMappingURL=style.css.map */
